Konfiguracja bazy danych

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,22 @@
-spring.datasource.url=jdbc:sqlserver://morfeusz.wszib.edu.pl;databaseName=${db.name}
+app.title.select = Wybierz kolor
+
+#spring.datasource.url=jdbc:sqlserver://morfeusz.wszib.edu.pl;databaseName=${db.name}
+#spring.datasource.username=${db.user}
+#spring.datasource.password=${db.pass}
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.hibernate.ddl-auto = create-drop
+
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/${db.name}
 spring.datasource.username=${db.user}
 spring.datasource.password=${db.pass}
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = create-drop
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
