--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 app.title.select = Wybierz kolor
+app.title.data = Dane
+app.title.stat = Statystyki
 
 #spring.datasource.url=jdbc:sqlserver://morfeusz.wszib.edu.pl;databaseName=${db.name}
 #spring.datasource.username=${db.user}
@@ -18,5 +20,6 @@ spring.datasource.username=${db.user}
 spring.datasource.password=${db.pass}
 
 #drop n create table again, good for testing, comment this in production
+#create, validate, update, create-drop, none
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
