--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.datasource.password=${db.pass}
 
 #drop n create table again, good for testing, comment this in production
 #create, validate, update, create-drop, none
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
